Bug 134308 - Crash ntdll!RtlReportCriticalFailure with zero undo steps
Summary: Crash ntdll!RtlReportCriticalFailure with zero undo steps
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Undo-Zero-Steps
  Show dependency treegraph
 
Reported: 2020-06-25 18:07 UTC by Telesto
Modified: 2023-05-04 13:16 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (11.97 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-06-25 18:07 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-06-25 18:07:08 UTC
Description:
ntdll!RtlReportCriticalFailure

Steps to Reproduce:
1. Open the attached file
2. Select the region A1 - C8
3. Press Insert comment in the toolbar -> comment on a single position
4. Click somewhere in A1 - C8 -> Crash

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 006c65bbd472cb1d7d44e095714e28190b76be0d
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL

but not in
Version: 7.0.0.0.beta1+ (x64)
Build ID: 22cb73dcc682edb15a2425339377ff54dde5dba6
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-GB
Calc: CL
Comment 1 Telesto 2020-06-25 18:07:20 UTC
Created attachment 162412 [details]
Example file
Comment 2 Xisco Faulí 2020-07-16 09:02:18 UTC
Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: d851a02df57ab378ed0cc6d9362516de09c3279c
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Unlikely someone uses 0 steps, reducing importance
Comment 3 Xisco Faulí 2020-07-16 09:04:40 UTC
Not reproducible in

Version: 5.4.0.0.alpha1+
Build ID: 9feb7f7039a3b59974cbf266922177e961a52dd1
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 4 Xisco Faulí 2020-07-16 09:17:50 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=05602710a047c58db0ceda88bedc291420990bc1

author	Luboš Luňák <l.lunak@collabora.com>	2019-02-12 13:48:53 +0100
committer	Michael Meeks <michael.meeks@collabora.com>	2019-02-28 15:52:51 +0100
commit 05602710a047c58db0ceda88bedc291420990bc1 (patch)
tree 3f74ed616190ad8b95a9f35942ba3149f223e68b
parent 07ba22e2953a91b61e770de2b4e3aefa9ea33dc6 (diff)
reintroduce ScCaptionPtr

Bisected with: bibisect-linux64-6.3

Adding Cc: to Luboš Luňák
Comment 5 Luboš Luňák 2021-11-29 12:58:57 UTC
As the commit message says, that commit basically reverts a previous commit. So whatever the problem is, it most likely was present even before that previous commit, so this is in fact not bisected (unless you're certain that the problem really was introduced by that commit and not just by it being a revert).
Comment 6 Commit Notification 2023-05-04 13:15:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b50df5aa72fb1259734794222119c5ad3017ba26

Resolves: tdf#134308 if max undo is 0, treat as if no undo

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.